[package]
name = "OpenEditor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_asset_loader = "0.22.0"
bevy_editor_pls = "0.10.0"
bevy_gizmos = "0.15.2"
bevy_kira_audio = "0.22.0"
bevy_mod_picking = "0.20.1"
bevy_rapier2d = "0.28.0"
bevy_tiled = "0.0.1"
chrono = "0.4.39"
flate2 = "1.0.35"
regex = "1.11.1"
reqwest = "0.12.12"
ron = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.0"
tokio-serde = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
